# os_exam

./: CMakeLists.txt  README.md  run.py
cfg_files/: func1.cfg  func2.cfg  func3.cfg
src/: cfg_reader.cpp  cfg_reader.h  functions.cpp  functions.h  integrate_parallel.cpp  integrate_parallel.h  main.cpp  mympi.cpp  mympi.h
